@@ -72,7 +72,7 @@ EXAMPLE1
      #     private methods (0)
      #     internals: {
      #         bibliographic_level               "m",
-     #         char_encoding_scheme              "a",
+     #         char_coding_scheme                "a",
      #         data_base_addr                    541,
      #         descriptive_cataloging_form       "i",
      #         encoding_level                    " ",
@@ -103,7 +103,7 @@ EXAMPLE2
      # Data object.
      my $data_marc_leader = Data::MARC::Leader->new(
              'bibliographic_level' => 'm',
-             'char_encoding_scheme' => 'a',
+             'char_coding_scheme' => 'a',
              'data_base_addr' => 541,
              'descriptive_cataloging_form' => 'i',
              'encoding_level' => ' ',
