@@ -14,7 +14,7 @@ is($ret->status, 'c', 'Get status (c).');
 is($ret->type, 'e', 'Get type (e).');
 is($ret->bibliographic_level, 'm', 'Get bibliographic level (m).');
 is($ret->type_of_control, ' ', 'Get type of control ( ).');
-is($ret->char_encoding_scheme, 'a', 'Get character encoding scheme (a).');
+is($ret->char_coding_scheme, 'a', 'Get character coding scheme (a).');
 is($ret->indicator_count, '2', 'Get indicator count (2).');
 is($ret->subfield_code_count, '2', 'Get subfield code count (2).');
 is($ret->data_base_addr, 541, 'Get data base address (541).');
@@ -35,7 +35,7 @@ is($ret->status, 'n', 'Get status (n).');
 is($ret->type, 'a', 'Get type (a).');
 is($ret->bibliographic_level, 'm', 'Get bibliographic level (m).');
 is($ret->type_of_control, ' ', 'Get type of control ( ).');
-is($ret->char_encoding_scheme, 'a', 'Get character encoding scheme (a).');
+is($ret->char_coding_scheme, 'a', 'Get character coding scheme (a).');
 is($ret->indicator_count, '2', 'Get indicator count (2).');
 is($ret->subfield_code_count, '2', 'Get subfield code count (2).');
 is($ret->data_base_addr, 0, 'Get data base address (0).');
