@@ -13,7 +13,7 @@ use Test::NoWarnings;
 my $obj = MARC::Leader->new;
 my $data = Data::MARC::Leader->new(
 	'bibliographic_level' => 'm',
-	'char_encoding_scheme' => 'a',
+	'char_coding_scheme' => 'a',
 	'data_base_addr' => 541,
 	'descriptive_cataloging_form' => 'i',
 	'encoding_level' => ' ',
